project(tests)

add_executable(rvalue_test rvalue_test.cpp)
add_executable(const_test const_test.cpp)
add_executable(decltype_test auto_decltype_test.cpp)
add_executable(type_alias type_alias.cpp)
add_executable(a_lot_test a_lot_test.cpp)
add_executable(delete_test_main delete_test_main.cpp)
add_executable(variadic_temp variadic_temp.cpp)
add_executable(succeed_test succeed_test.cpp)
add_executable(lifetime_test lifetime_test.cpp)
add_executable(smart_pointer_test smart_pointer_test.cpp)
add_executable(header_namespace_test header_namespace_test.cpp header_namespace_test.h)
add_executable(cin_test cin_test.cpp)
add_executable(derived_class_test derived_class_test.cpp)
add_executable(multiple_inheritance_test multiple_inheritance_test.cpp)

